--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,13 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define the jobs we want to run for this project
-jobs:
-  build:
-    docker:
-      - image: circleci/openjdk:8-jdk-stretch
-    steps:
-      - checkout
-      - run: mvn clean package -DskipMunitTests
-  test: 
-    docker:
-      - image: circleci/openjdk:8-jdk-stretch
-    steps:
-      - checkout
-      - run: mvn test
-  deploy:
-    docker:
-      - image: circleci/openjdk:8-jdk-stretch
-    steps:
-      - checkout
-      - run: mvn deploy -DmuleDeploy
-
-# Orchestrate our job run sequence
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  build_and_test:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      - welcome/run
