--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 					<workers>1</workers>
 					<workerType>Micro</workerType>
 					<applicationName>mule-munit-cicd-api</applicationName>
+					<objectStoreV2>true</objectStoreV2>
 					<muleVersion>4.3.0</muleVersion>
 				</cloudHubDeployment>
 				</configuration>
