--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
 
 # Orchestrate our job run sequence
 workflows:
-  build_and_test:
+  build_test_and_deploy:
     jobs:
       - build
       - test:
@@ -31,4 +31,5 @@ workflows:
             - build
       - deploy:
           requires:
-            - test
+            - test       
+       
