--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,12 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
-					<uri>https://anypoint.mulesoft.com/</uri>
+					<uri>${uri}</uri>
 					<username>${username}</username>
 					<password>${password}</password>
 					<environment>${environment}</environment>
 					<workers>1</workers>
-					<workerType>Micro</workerType>
+					<workerType>${worker}</workerType>
 					<applicationName>mule-munit-circleci-api</applicationName>
 					<muleVersion>4.3.0</muleVersion>
 				</cloudHubDeployment>
