added cache for build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: - maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
       - run: mvn clean package -DskipMunitTests
       - save_cache:
           paths: 
             - ~/.m2
-          keys: - maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
   test: 
     docker:
       - image: circleci/openjdk:8-jdk-stretch
